--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
       </button>
       <div class="lds-hourglass loader hidden"></div>
     </div>
-
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quidem
+      dolor ipsam maxime consequuntur quisquam quo quod dolorem delectus totam.
+      Aut libero omnis blanditiis repellendus cupiditate doloribus eos
+      necessitatibus, vitae fugit ducimus ipsam eligendi ratione adipisci? Nam
+      quaerat cupiditate, molestiae tenetur assumenda illo laudantium ducimus
+      non eum! Autem, reprehenderit voluptatem?
+    </p>
     <script type="module" src="./jokes.js"></script>
   </body>
 </html>
